--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/students_db
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.mvc.view.prefix = /WEB-INF/jsp/
+spring.mvc.view.suffix = .jsp
 
