added mail verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 
+spring.mail.host=smtp.mail.ru
+spring.mail.username=levanova71@mail.ru
+spring.mail.password=473589
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
+
