--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${{secrets.MAIL_USERNAME}}
+spring.mail.password=${{secrets.MAIL_PASSWORD}}
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
